# virgilio

./: Cargo.toml
resources/: Component.yaml
src/: component.rs  components.rs  main.rs
